Tue Aug 26 16:59:33 GMT 2003  Holger Bochnig <hbgg@gmx.net>

	add commands and GUI option to set the language

	* backgammon.h, gnubg.c: add commands
	* gnubg.c (CommandSaveSettings): save language setting
	* gnubg.c (real_main): read language setting from .gnubgautorc,
	  set language
	* gtkoptions.c (OptionsPages, OptionsOK, OptionsSet):
	  GUI language setting
	* set.c, show.c: new functions CommandSetLang, CommandShowLang

TueAug 26 16:17:05  GMT 2003  Jim Segrave jes@jes-2.dmeon.nl

	* gtkexport.c - make number of options a compile time calculation
	
Tue Aug 26 01:43:26 2003  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c (SetAnnotation): rearrange skill widgets to save space

Mon Aug 25 23:39:47 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (GTKNew): add call to gtk_main_quit when dialog
	is destroyed.
	(reported by Joern Thyssen)

Mon Aug 25 23:26:25 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c: ensure that TOGGLE_GAMELIST and friends to not
	overlap with enum _gnubgcommand.

Mon Aug 25 20:53:03 GMT 2003  Jim Segrave jes@jes-2.dmeon.nl

	* gnubg.c = glibc putenv() doesn't copy strings 

Mon Aug 25 22:12:56 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c (TheoryUpdated): enlarge font used for
	market window.
	(reported by Massimiliano Maini)

Tue Aug 26 07:16:35 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gtkgame.c (SkillMenu): ignore skill "good" in gtk game.

Sun Aug 24 21:22:13 2003  Oystein Johansen  <oystein@gnubg.org>

	This is a big patch to integrate the GUI. There are still
	a couple of issues to be solved, but I'm commiting this, and hope
	someone can help out with the remaining issues. (See my post to the
	mailing list.

	* render.c, boardpos.c, gtkprefs.c, gtkboard.[ch]: Stretch the 2D board
	  to fit the screen better. The size is now 108 x 82.

	* gtkgame.[ch]: Integrate the game record, annotation and message window
	  with the main window. Add a "New" dialog. Improve GTKFileCommand
