@@ -1,3 +1,8 @@
+<<<<<<< ChangeLog
+Wed Aug 27 09:00:00 2003  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkgame.c Added navigation for match statistics
+
 Tue Aug 26 16:59:33 GMT 2003  Holger Bochnig <hbgg@gmx.net>
 
 	add commands and GUI option to set the language
